--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -136,6 +136,10 @@
     &__down-link {
         grid-row: 6 / 7;
         grid-column: 2 / 3;
+
+        @media only screen and (max-width: $bp-small) {
+            display: none;
+        }
     }
 
     &__down {
@@ -147,6 +151,10 @@
             cursor: pointer;
             animation: go-down 0.3s infinite;
             animation-direction: alternate;
+        }
+
+        @media only screen and (max-width: $bp-small) {
+            display: none;
         }
     }
 }
